--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -18,6 +18,9 @@
   display: inline-block;
   height: 65rpx;
   font-size: 26rpx;
+  width: calc(100% - 70rpx);
+  padding-right: 15rpx;
+  box-sizing: border-box;
 }
 .search-placeholder{
   color: #8CCEFD;
